<resources>
    <string name="app_name">Notes Feed</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_personal_notes">My Notes</string>
    <string name="title_activity_notes_feed_main">Notes Feed</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="button_register">Register</string>
    <string name="heading_login_info">Login info</string>

    <string name="confirm_pass">Confirm password</string>

    <!--Personal Info-->
    <string name="heading_personal_info">Personal info</string>
    <string name="fname_personal_info">First name</string>
    <string name="lname_personal_info">Last name</string>
    <string name="back">Back</string>
    <string name="submit">Submit</string>
    <string name="re_type_password">Re-type password</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="enter_new_password">Enter New Password:</string>
    <string name="title_activity_create_group">Create Group</string>

    <string name="find_group_searchbar">Search for a group name</string>
    <string name="privacy_switch_text">Slide to switch privacy</string>


</resources>
