<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="10dp"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="10dp"
    tools:context="mobidev.com.notesfeed.SignUp"
    android:padding="20dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="30dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/personal_info"
                        android:orientation="vertical"
                        android:background="#ffffff"
                        android:padding="20dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/heading_personal_info"
                            android:textSize="20dp"
                            android:layout_marginBottom="10dp"
                            android:textColor="@color/abc_primary_text_material_light" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/fname_personal_info"
                            android:id="@+id/fname_personal_info"
                            android:layout_marginTop="15dp"
                            android:inputType="textCapSentences|text" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/lname_personal_info"
                            android:id="@+id/lname_personal_info"
                            android:inputType="textCapSentences|text" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginBottom="50dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/login_info"
                    android:orientation="vertical"
                    android:background="#ffffff"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/heading_login_info"
                        android:textSize="20dp"
                        android:layout_marginBottom="10dp"
                        android:textColor="@color/abc_primary_text_material_light"
                        />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:id="@+id/email_text"
                        android:layout_marginTop="15dp"
                        android:inputType="textEmailAddress" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:id="@+id/password_text"
                        android:inputType="textPassword" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_pass"
                        android:id="@+id/confirm_password_text"
                        android:inputType="textPassword" />

                </LinearLayout>

                </android.support.v7.widget.CardView>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_register"
                android:onClick="registerUser"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
