<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Enter Current Password:"
        android:id="@+id/textView3"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:layout_alignParentStart="true" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/currentPass"
        android:inputType="textCapSentences|textPassword|text"
        android:text="Current Password"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:textColor="#a27373" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/enter_new_password"
        android:id="@+id/textView4"
        android:textSize="20sp"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/currentPass"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/newPass"
        android:inputType="textCapSentences|textPassword|text"
        android:text="New Password"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/currentPass"
        android:textColor="#FFA27373" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/confirm_password"
        android:id="@+id/textView5"
        android:textSize="20sp"
        android:layout_marginTop="42dp"
        android:layout_below="@+id/newPass"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/retypePass"
        android:inputType="textCapSentences|textPassword|text"
        android:text="@string/re_type_password"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/newPass"
        android:textColor="#FFA27373"
        android:layout_below="@+id/textView5" />
    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:background="@color/whiteIcon"
        android:id="@+id/button1"
        android:layout_alignTop="@+id/button"
        android:layout_alignEnd="@+id/textView5" />
    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/button"
        android:background="@color/whiteIcon"
        android:layout_toEndOf="@+id/textView4" />

</RelativeLayout>
